# TableauAPI

./: .env.example  .gitignore  README.md  pyproject.toml
tableauapi/: __init__.py
tableauapi/cli/: __init__.py  main.py
tableauapi/cli/commands/: auth.py  explore.py  export.py  metadata.py
tableauapi/core/: auth.py  client.py  metadata.py  storage.py
tableauapi/utils/: exceptions.py  helpers.py
